Filters icon, name/nickname

--- a/public/modules/messages/views/filters.partial.html
+++ b/public/modules/messages/views/filters.partial.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
   <div class="panel-heading visible-xs visible-sm" data-ng-click="collapseFilters = !collapseFilters">
-    <h4 class="panel-title"><a><span class="glyphicon glyphicon-chevron-down"></span> Filters</a></h4></div>
+    <h4 class="panel-title"><a><span class="fa fa-filter"></span> Filters</a></h4></div>
   <div class="panel-body filters" collapse="collapseFilters">
     <ul class="nav nav-pills nav-stacked msg-type-filter">
       <li data-ng-class="{active: (filters.msgType === '') }" data-ng-click="setFilters({ msgType: '' })"><a><span class="glyphicon glyphicon-home"></span> All</a></li>
