--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -45,12 +45,14 @@
       </li>
     </ul>
 
-    <form class="navbar-form navbar-left" data-ng-submit="addIdentifier()" id="nav-search" role="search" data-ng-if="isActive('/')">
+    <form class="navbar-form navbar-left nav-search" data-ng-submit="addIdentifier()" role="search" data-ng-if="isActive('/')">
       <div class="input-group">
-        <input type="text" data-ng-keydown="searchKeydown($event)" data-ng-model="query.term" autocomplete="off" autofocus value="" id="nav-search-field" class="search-search form-control" placeholder="Search">
+        <input type="text" data-ng-keydown="searchKeydown($event)" data-ng-model="query.term" autocomplete="off" autofocus value="" class="nav-search-field search-search form-control" placeholder="Search">
         <span class="input-group-btn"><button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-plus"></span></button></span>
       </div>
     </form>
+
+    <autocomplete data-ng-controller="IdentifiersController" data-ng-if="!isActive('/')" data-ng-model="queryTerm" on-select="dropdownSearchSelect" on-type="search" data="identifiers" attr-input-class="form-control nav-search-field" attr-class="navbar-form navbar-left nav-search hidden-xs" attr-placeholder="Search">
 
 	</div>
 </nav>
