--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -52,7 +52,7 @@
       </div>
     </form>
 
-    <autocomplete data-ng-controller="IdentifiersController" data-ng-if="!isActive('/')" data-ng-model="queryTerm" on-select="dropdownSearchSelect" on-type="search" data="identifiers" attr-input-class="form-control nav-search-field" attr-class="navbar-form navbar-left nav-search hidden-xs" attr-placeholder="Search">
+    <autocomplete data-ng-controller="IdentifiersController" data-ng-if="!isActive('/')" data-ng-model="queryTerm" on-select="dropdownSearchSelect" on-type="dropdownSearch" data="identifiers" attr-input-class="form-control nav-search-field" attr-class="navbar-form navbar-left nav-search hidden-xs" attr-placeholder="Search">
 
 	</div>
 </nav>
