Hero title: Global address book

--- a/public/modules/identifiers/views/list-identifiers.client.view.html
+++ b/public/modules/identifiers/views/list-identifiers.client.view.html
@@ -1,7 +1,7 @@
 <section data-ng-controller="IdentifiersController" data-ng-init="search()">
   <div class="mar-top60-xs"></div>
   <div data-ng-if="!queryTerm && !authentication.user" class="jumbotron">
-    <div class="align-center"><h1>Address book with ratings</h1></div>
+    <div class="align-center"><h1>Global address book</h1></div>
 
     <div class="row">
       <div class="col-sm-4"><div class="align-center"><i class="hidden-xs fa fa-link fa-5x mar-bot20"></i><p><i class="hidden-sm hidden-md hidden-lg fa fa-link"></i> Keep your contacts and trusted online identity up-to-date.</p></div></div>
