Rebrand to Identi.fi

--- a/public/modules/core/views/about.client.view.html
+++ b/public/modules/core/views/about.client.view.html
@@ -1,15 +1,15 @@
 <div class="col-md-8">
-  <h3>About Identifi</h3>
-  <p class="lead">Identifi is an address book application that stores its data in a distributed fashion on the computers of its users. The stored information is not owned or centrally administered by anyone.</p>
+  <h3>About Identi.fi</h3>
+  <p class="lead">Identi.fi is an address book application that stores its data in a distributed fashion on the computers of its users. The stored information is not owned or centrally administered by anyone.</p>
   <p>In addition to keeping your contact details such as phone number or bitcoin address up-to-date, you can give other users <b>trust ratings and feedback</b>. You can filter all shown information by your <b>web of trust</b>, for example by displaying only the information stored by your friends and the people they trust.</p>
-  <p>Identifi is free and open source software. The project is in alpha development stage.</p>
+  <p>Identi.fi is free and open source software. The project is in alpha development stage.</p>
   <ul>
     <li><a href="http://identifi.org">Project page</a></li>
     <li><a href="https://github.com/identifi">Source code</a></li>
   </ul>
 
   <h3>Privacy policy</h3>
-  <p>The Identifi network stores user-submitted identifiers which can be of arbitrary type, for example <i>name</i>, <i>email address</i> or <i>phone number</i>. All stored information is made public and broadcast to the P2P network.</p>
+  <p>The Identi.fi network stores user-submitted identifiers which can be of arbitrary type, for example <i>name</i>, <i>email address</i> or <i>phone number</i>. All stored information is made public and broadcast to the P2P network.</p>
 
-  <p>This Identifi user interface uses 3rd party authentication options and does not store login credentials.</p>
+  <p>This Identi.fi user interface uses 3rd party authentication options and does not store login credentials.</p>
 </div>
