--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -2,7 +2,7 @@
 	<div class="container" role="navigation">
     <div class="navbar-header">
       <h1><a href="/#!/" data-ng-click="logoClicked()" class="navbar-brand">
-      Identifi</a></h1>
+      Identi.fi</a></h1>
     </div>
 
     <ul class="nav navbar-nav navbar-right">
