Retina gravatars, navbar style

--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -417,7 +417,10 @@ section.section {
   --- Header & menu ----
 =========================== */
 .navbar {
-  background-color: rgba(0, 0, 0, 0.3);
+  background: #fff;
+  box-shadow: none;
+  -webkit-box-shadow: none;
+  filter: none;
   display: block;
   vertical-align: middle;
   margin-bottom: 0;
@@ -427,6 +430,10 @@ section.section {
 .navbar .navbar-collapse {
   margin-bottom: 0;
   padding-bottom: 0;
+}
+
+.nav-search .input, .nav-search-button {
+  border-radius: 50px;
 }
 
 .nav li {
