--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -1171,6 +1171,10 @@ a.socialIcon:hover, .socialHoverClass {
 Media queries
 ========================================= */
 @media (max-width: 767px) {
+  body {
+    padding-top: 50px;
+  }
+
   .navbar-nav {
     margin-top: 0;
   }
@@ -1200,6 +1204,12 @@ Media queries
 
   .stats .col-md-3 {
     margin-bottom: 30px;
+  }
+}
+@media (max-width: 991px) {
+  #search-results {
+    margin-left: -15px;
+    width: 100vw;
   }
 }
 .navbar-brand {
