--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -1209,7 +1209,7 @@ Media queries
 @media (max-width: 991px) {
   #search-results {
     margin-left: -15px;
-    width: 100vw;
+    width: 100vw !important;
   }
 }
 .navbar-brand {
