--- a/public/modules/messages/views/message.partial.html
+++ b/public/modules/messages/views/message.partial.html
@@ -3,11 +3,11 @@
     <p class="">
       <span class="mar-left5 pull-right" data-ng-class="msg.iconStyle" data-ng-repeat="n in msg.iconCount track by $index"></span>
       <strong>
-        <a data-ng-href="#!/id/{{msg.linkToAuthor[0]|escape}}/{{msg.linkToAuthor[1]|escape}}" class="id-link"><img height="30" width="30" alt="" src="https://www.gravatar.com/avatar/{{msg.gravatar}}?d=retro&amp;s=30" class="img-rounded mar-right10"><span data-ng-bind="msg.authorName||msg.linkToAuthor[1]"></span></a>
+        <a data-ng-href="/id/{{msg.linkToAuthor[0]|escape}}/{{msg.linkToAuthor[1]|escape}}" class="id-link"><img height="30" width="30" alt="" src="https://www.gravatar.com/avatar/{{msg.gravatar}}?d=retro&amp;s=30" class="img-rounded mar-right10"><span data-ng-bind="msg.authorName||msg.linkToAuthor[1]"></span></a>
       </strong>
       <small><i class="glyphicon glyphicon-play"></i></small>
-      <a href="#!/id/{{msg.linkToRecipient[0]|escape}}/{{msg.linkToRecipient[1]|escape}}" data-ng-bind="msg.recipientName||msg.linkToRecipient[1]" class="id-link"></a>
-       - <a href="#!/messages/{{msg.hash}}" data-ng-bind="msg.data.signedData.timestamp*1000|date:'medium'" class="text-muted small" style="display:inline-block;"></a>
+      <a href="/id/{{msg.linkToRecipient[0]|escape}}/{{msg.linkToRecipient[1]|escape}}" data-ng-bind="msg.recipientName||msg.linkToRecipient[1]" class="id-link"></a>
+       - <a href="/messages/{{msg.hash}}" data-ng-bind="msg.data.signedData.timestamp*1000|date:'medium'" class="text-muted small" style="display:inline-block;"></a>
     </p>
 
     <p data-ng-bind-html="msg.data.signedData.comment|linky"></p>
