--- a/public/modules/identifiers/views/view-identifier.client.view.html
+++ b/public/modules/identifiers/views/view-identifier.client.view.html
@@ -91,7 +91,7 @@
     <div class="panel-body">
       <ul data-ng-repeat="level in trustpaths" class="trustpath-list list-unstyled">
         <li data-ng-repeat-start="id in level" data-ng-if="!$parent.$last && ($index < 3 || collapseLevel[$parent.$index])">
-          <a class="id-link" data-ng-href="#!/id/{{id[0]|escape}}/{{id[1]|escape}}" title=""><img alt="" src="https://www.gravatar.com/avatar/{{id.gravatar}}?d=retro&amp;s=30" class="mar-bot5 img-rounded mar-right10"><span data-ng-bind="id.name.name || id[1]"></span></a>
+          <a class="id-link" data-ng-href="/id/{{id[0]|escape}}/{{id[1]|escape}}" title=""><img alt="" src="https://www.gravatar.com/avatar/{{id.gravatar}}?d=retro&amp;s=30" class="mar-bot5 img-rounded mar-right10"><span data-ng-bind="id.name.name || id[1]"></span></a>
         </li>
         <li class="mar-bot5" data-ng-if="level.length > 3 && $index === 2">
           <a href="" data-ng-click="collapseLevel[$parent.$index] = !collapseLevel[$parent.$index]">{{level.length - 3}} more</a>
@@ -100,7 +100,7 @@
           <span class="positive mar-left5 mar-bot10 glyphicon glyphicon-thumbs-up"></span>
         </li>
         <li data-ng-if="$last">
-          <a class="id-link" data-ng-href="#!/id/{{idType|escape}}/{{idValue|escape}}" title=""><img alt="" src="https://www.gravatar.com/avatar/{{gravatar}}?d=retro&amp;s=30" class="mar-bot5 img-rounded mar-right10"><span data-ng-bind="info.name || info.nickname || idValue"></span></a>
+          <a class="id-link" data-ng-href="/id/{{idType|escape}}/{{idValue|escape}}" title=""><img alt="" src="https://www.gravatar.com/avatar/{{gravatar}}?d=retro&amp;s=30" class="mar-bot5 img-rounded mar-right10"><span data-ng-bind="info.name || info.nickname || idValue"></span></a>
         </li>
       </ul>
     </div>
@@ -172,7 +172,7 @@
                       </span>
                     </td>
                     <td colspan="3">
-                      <a data-ng-href="#!/id/{{id.type|escape}}/{{id.value|escape}}" data-id-type="{{id.type}}" data-id-value="{{id.value}}" data-ng-bind="id.value" class="id-link"></a><br>
+                      <a data-ng-href="/id/{{id.type|escape}}/{{id.value|escape}}" data-id-type="{{id.type}}" data-id-value="{{id.value}}" data-ng-bind="id.value" class="id-link"></a><br>
                       <small data-ng-bind="id.type"></small>
                     </td>
                     <!--<td>
@@ -196,12 +196,12 @@
                             <span class="negative glyphicon glyphicon-remove visible-xs mar-right10"></span>
                           </span>
                           <strong>
-                            <a data-ng-href="#!/id/{{msg.linkToAuthor[0]|escape}}/{{msg.linkToAuthor[1]|escape}}" class="id-link">
+                            <a data-ng-href="/id/{{msg.linkToAuthor[0]|escape}}/{{msg.linkToAuthor[1]|escape}}" class="id-link">
                               <img alt="" src="https://www.gravatar.com/avatar/{{msg.gravatar}}?d=retro&amp;s=30" class="img-rounded mar-right5"> 
                               <span data-ng-bind="msg.authorName||msg.data.signedData.author[0][1]"></span>
                             </a>
                           </strong>
-                           - <a data-ng-href="#!/messages/{{msg.hash}}" data-ng-bind="msg.data.signedData.timestamp*1000|date:'mediumDate'" class="text-muted small" style="display:inline-block;"></a>
+                           - <a data-ng-href="/messages/{{msg.hash}}" data-ng-bind="msg.data.signedData.timestamp*1000|date:'mediumDate'" class="text-muted small" style="display:inline-block;"></a>
                            
                         </span>
                       </div>
